--- a/logon/src/main/res/values/strings.xml
+++ b/logon/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
-
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
+    <string name="prompt_email">E-mailadres</string>
+    <string name="prompt_password">Wachtwoord</string>
+    <string name="action_sign_in">Inloggen</string>
+    <string name="action_sign_in_short">Inloggen</string>
+    <string name="error_invalid_email">Dit is geen valide E-mailadres</string>
+    <string name="error_invalid_password">Dit is geen valide wachtwoord</string>
+    <string name="error_incorrect_password">Dit wachtwoord is niet correct</string>
+    <string name="error_field_required">Dit veld is verplicht</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
 </resources>
