--- a/menu/src/main/res/values/strings.xml
+++ b/menu/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
-    <string name="tabKlanten">Klanten</string>
-    <string name="tabObjecten">Objecten</string>
-    <string name="tabLogs">Logs</string>
+    <string name="tabKid">Klant</string>
+    <string name="tabObj">Object</string>
+    <string name="tabLog">Log</string>
+    <string name="menuBedrijfLabel">Bedrijf</string>
+    <string name="menuMedewerkerLabel">Medewerker</string>
+    <string name="menuKlantLabel">Klant</string>
+    <string name="menuObjectLabel">Object</string>
     <string name="menuBedrijf">Niet ingelogd</string>
     <string name="menuMedewerker">Niet ingelogd</string>
     <string name="menuKlant">Geen klant geselecteerd</string>
     <string name="menuObject">Geen object geselecteerd</string>
     <string name="searchKlant">Zoek op naam, postcode of plaats</string>
+    <string name="zoekButton">Zoeken</string>
 </resources>
